# swagger.json
@@ -679,7 +679,6 @@
                         "schema": {
                             "type": "object",
                             "properties":{
-                                
                                 "name":{
                                     "type": "string"
                                 },
@@ -708,6 +707,76 @@
                 "tags": ["SubTasks"],
                 "responses": {
                     "200": {"description": "Sub Tasks is deleted"},
+                    "404": {"description": "id not found"},
+                    "401": {"description": "Unauthorized"}
+                }
+            }
+        },
+        "/upload/{taskId}": {
+            "parameters": [
+                {
+                    "name": "taskId",
+                    "in": "path",
+                    "required": true,
+                    "description": "Primary key of task table",
+                    "type": "string"
+                }
+            ],
+            "get": {
+                "summary": "Get files list with given taskId",
+                "tags": ["Upload"],
+                "responses": {
+                    "200": {
+                    "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/files"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "summary": "upload Single File",
+                "tags": ["Upload"],
+                "parameters": [
+                    {
+                        "name": "Upload",
+                        "in": "body",
+                        "description": "File details",
+                        "schema": {
+                            "type": "object",
+                            "properties":{
+                                "image":{
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Files successfully created.",
+                        "schema": {
+                            "$ref": "#/definitions/files"
+                        }
+                    }
+                }
+            }
+        },
+        "/upload/{id}": {
+            "parameters": [
+                {
+                    "name": "id",
+                    "in": "path",
+                    "required": true,
+                    "description": "Primary key of files table",
+                    "type": "string"
+                }
+            ],
+            "delete": {
+                "summary": "Delete file with given id",
+                "tags": ["Upload"],
+                "responses": {
+                    "200": {"description": "File successfully deleted."},
                     "404": {"description": "id not found"},
                     "401": {"description": "Unauthorized"}
                 }
@@ -817,6 +886,40 @@
                 },
                 "status": {
                     "type": "boolean"
+                }
+            }
+        },
+        "files": {
+            "properties": {
+                "original_filename": {
+                    "type": "string"
+                },
+                "public_id": {
+                    "type": "string"
+                },
+                "width": {
+                    "type": "string"
+                },
+                "height": {
+                    "type": "string"
+                },
+                "format": {
+                    "type": "string"
+                },
+                "resource_type": {
+                    "type": "string"
+                },
+                "bytes": {
+                    "type": "string"
+                },
+                "url": {
+                    "type": "string"
+                },
+                "secure_url": {
+                    "type": "string"
+                },
+                "taskId": {
+                    "type": "string"
                 }
             }
         },
